--- a/make.html
+++ b/make.html
@@ -17,14 +17,14 @@
       <h3>Make Your Reservation</h3>
       <hr>
       <a href="/"><button type="button" class="btn btn-danger btn-lg"><span class="glyphicon glyphicon-list"></span> View Tables</button></a>
-    </div>
+    </div><button type="button" class="btn-danger btn-lrg"><span class="glyphicon glyphicon-home"></span></button>
     <div class="row">
 
       <div class="col-lg-12">
 
         <div class="panel panel-default">
           <div class="panel-heading">
-            <h3 class="panel-title"><strong>Add Characters</strong></h3>
+            <h3 class="panel-title"><strong>Table Reservation</strong></h3>
           </div>
           <div class="panel-body">
             <form method="POST" role="form">
@@ -35,17 +35,17 @@
               </div>
 
               <div class="form-group">
-                <label for="role">Role</label>
+                <label for="phone-number">Phonne Number</label>
                 <input type="text" class="form-control" id="role">
               </div>
 
               <div class="form-group">
-                <label for="age">Age</label>
+                <label for="email">Email</label>
                 <input type="text" class="form-control" id="age">
               </div>
 
               <div class="form-group">
-                <label for="force-points">Force Points</label>
+                <label for="Unique-ID">Unique ID</label>
                 <input type="text" class="form-control" id="force-points">
               </div>
 
