--- a/view.html
+++ b/view.html
@@ -24,10 +24,9 @@
     </thead>
     </table><br><br>
     	<table class="table">
-      	<thead>Waiting List
+      	<thead>Waiting List</thead>
       	<tr>
       	</tr>
-    	</thead>
     </table><br><br>
  	Control Panel<br>
  	<a href="tables#">Clear Table</a>&nbsp;|&nbsp;<a href="#">API Table Link</a>&nbsp;|&nbsp;<a href="#">API Wait List</a>
