added buttons for top of jumbotron

--- a/make.html
+++ b/make.html
@@ -16,8 +16,11 @@
       <h1>Hot Restaurant</h1>
       <h3>Make Your Reservation</h3>
       <hr>
-      <a href="/"><button type="button" class="btn btn-danger btn-lg"><span class="glyphicon glyphicon-list"></span> View Tables</button></a>
-    </div><button type="button" class="btn-danger btn-lrg"><span class="glyphicon glyphicon-home"></span></button>
+      <a href="/tables"><button type="button" class="btn btn-danger btn-lg"><span class="glyphicon glyphicon-list"></span> View Tables</button></a> 
+      <a href="/"><button type="button" class="btn  btn-lrg btn-default"><span class="glyphicon glyphicon-home"></span></button></a>
+    </div>
+   
+
     <div class="row">
 
       <div class="col-lg-12">
@@ -52,7 +55,7 @@
             </form>
             <br>
             <div class="text-right">
-              <button type="submit" class="btn btn-primary btn-md" id="add-btn"><span class="glyphicon glyphicon-fire"></span> Add to the Force</button>
+              <button type="submit" class="btn btn-primary btn-md" id="add-btn"><span class="glyphicon glyphicon-fire"></span> Submit</button>
             </div>
           </div>
         </div>
