--- a/view.html
+++ b/view.html
@@ -15,7 +15,8 @@
   		<h1 class="display-3">Hot Restaurant</h1>
   		<hr class="my-4">
   		<p>Current Reservations and Waiting List</p><br><br>
-  		<button type="button" id="makeres" class="btn btn-danger">Make Reservations</button>&nbsp;&nbsp;<button type="button" id="home" class="btn btn-warning">Home</button>
+  		<a class="btn" href="make.html">Make a Reservation</a>
+  		&nbsp;&nbsp;<a class="btn" href="home.html">Home</a>
 	</div>
 	<table class="table">
       	<thead>Current Reservations
