took out href for home button

--- a/make.html
+++ b/make.html
@@ -17,7 +17,7 @@
       <h3>Make Your Reservation</h3>
       <hr>
       <a href="/tables"><button type="button" class="btn btn-danger btn-lg"><span class="glyphicon glyphicon-list"></span> View Tables</button></a> 
-      <a href="/"><button type="button" class="btn  btn-lrg btn-default"><span class="glyphicon glyphicon-home"></span></button></a>
+      <!-- <a href="/"> --><button type="button" class="btn  btn-lrg btn-default"><span class="glyphicon glyphicon-home"></span></button><!-- </a> -->
     </div>
    
 
