--- a/make.html
+++ b/make.html
@@ -17,7 +17,7 @@
       <h3>Make Your Reservation</h3>
       <hr>
       <a href="/tables"><button type="button" class="btn btn-danger btn-lg"><span class="glyphicon glyphicon-list"></span> View Tables</button></a> 
-      <!-- <a href="/"> --><button type="button" class="btn  btn-lrg btn-default"><span class="glyphicon glyphicon-home"></span></button><!-- </a> -->
+      <!-- <a href="/"> --><button type="button" class="btn  btn-lg btn-default"><span class="glyphicon glyphicon-home"></span></button><!-- </a> -->
     </div>
    
 
@@ -38,7 +38,7 @@
               </div>
 
               <div class="form-group">
-                <label for="phone-number">Phonne Number</label>
+                <label for="phone-number">Phone Number</label>
                 <input type="text" class="form-control" id="role">
               </div>
 
