--- a/make.html
+++ b/make.html
@@ -35,18 +35,18 @@
               </div>
 
               <div class="form-group">
-                <label for="phone-number">Phonne Number</label>
-                <input type="text" class="form-control" id="role">
+                <label for="phoneNumber">Phonne Number</label>
+                <input type="text" class="form-control" id="phoneNumber">
               </div>
 
               <div class="form-group">
                 <label for="email">Email</label>
-                <input type="text" class="form-control" id="age">
+                <input type="text" class="form-control" id="email">
               </div>
 
               <div class="form-group">
-                <label for="Unique-ID">Unique ID</label>
-                <input type="text" class="form-control" id="force-points">
+                <label for="UniqueID">Unique ID</label>
+                <input type="text" class="form-control" id="UniqueID">
               </div>
 
             </form>
@@ -65,18 +65,18 @@
     // Question: What does this code do?
     $("#add-btn").on("click", function(event) {
       event.preventDefault();
-      var newCharacter = {
+      var newReservation = {
         name: $("#name").val().trim(),
-        role: $("#role").val().trim(),
-        age: $("#age").val().trim(),
-        forcePoints: $("#force-points").val().trim()
+        phoneNumber: $("#phoneNumber").val().trim(),
+        email: $("#email").val().trim(),
+        UniqueID: $("#UniqueID").val().trim()
       };
 
       // Question: What does this code do??
-      $.post("/api/new", newCharacter)
+      $.post("/new", newReservation)
       .done(function(data) {
         console.log(data);
-        alert("Adding character...");
+        alert("Adding reservation...");
       });
     });
   </script>
