--- a/view.html
+++ b/view.html
@@ -30,7 +30,7 @@
       	</tr>
     </table><br><br>
  	Control Panel<br>
- 	<a href="#" id="clear">Clear Table</a>&nbsp;|&nbsp;<a href="#">API Table Link</a>&nbsp;|&nbsp;<a href="#">API Wait List</a>
+ 	<a href="#" id="clear">Clear Table</a>&nbsp;|&nbsp;<a href="api/tables">API Table Link</a>&nbsp;|&nbsp;<a href="api/waitlist">API Wait List</a>
     </div>
     </div>
     </div>
