--- a/make.html
+++ b/make.html
@@ -82,8 +82,8 @@
     });
   </script>
 
-  <a href="/table">API Table Link</a> |
-  <a href="/waitlist">API Wait list</a>
+  <a href="/api/table">API Table Link</a> |
+  <a href="/api/waitlist">API Wait list</a>
 
 </body>
 </html>
