--- a/view.html
+++ b/view.html
@@ -18,13 +18,13 @@
   		<a href="/reserve" class="text-center"><button type="button" class="btn btn-danger btn-lg center-block"><span class="glyphicon glyphicon-credit-card"></span> Make Reservation</button></a>
   		<a href="/"><button type="button" class="btn btn-lg btn-default"><span class="glyphicon glyphicon-home"></span></button></a>
 	</div>
-	<table class="table">
+	<table class="table" id="reservations">
       	<thead>Current Reservations
       	<tr>
       	</tr>
     </thead>
     </table><br><br>
-    	<table class="table">
+    	<table class="table" id="waitlist">
       	<thead>Waiting List</thead>
       	<tr>
       	</tr>
@@ -34,9 +34,18 @@
     </div>
     </div>
     </div>
+
+      <script type="text/javascript">
+      $.get("/api/table", function(data) {
+        console.log(data);
+        for (var i = 0; i < data.length; i++) {
+        	$("reservations").append(data[i].uniqueID;
+        };
+      });
+  </script>
+
     	<script type="text/javascript">
     	function clearTable(){
-
 		var currentURL = window.location.origin;
 		$.ajax({url: currentURL + "/api/clear", method: "POST"})
 
