added reset form logic to script

--- a/make.html
+++ b/make.html
@@ -79,6 +79,7 @@
         console.log(data);
         alert("Adding reservation...");
       });
+      $('form').get(0).reset();
     });
   </script>
 
