--- a/view.html
+++ b/view.html
@@ -18,16 +18,27 @@
   		<a href="/reserve" class="text-center"><button type="button" class="btn btn-danger btn-lg center-block"><span class="glyphicon glyphicon-credit-card"></span> Make Reservation</button></a>
   		<a href="/"><button type="button" class="btn btn-lg btn-default"><span class="glyphicon glyphicon-home"></span></button></a>
 	</div>
-	<table class="table" id="reservations">
-      	<thead>Current Reservations
-      	<tr>
-      	</tr>
-    </thead>
-    </table><br><br>
-    	<table class="table" id="waitlist">
-      	<thead>Waiting List</thead>
-      	<tr>
-      	</tr>
+	
+
+
+              <table class="table table-hover" id='reservations'>
+                <thead>Reservations</thead>
+                <tbody>
+                </tbody>
+              </table>
+
+              <table class="table table-hover" id='waitlist'>
+                <thead>Waiting List</thead>
+                <tbody>
+                </tbody>
+              </table>
+
+
+
+
+	<br><br>
+
+
     </table><br><br>
  	Control Panel<br>
  	<a href="#" id="clear">Clear Table</a>&nbsp;|&nbsp;<a href="api/tables">API Table Link</a>&nbsp;|&nbsp;<a href="api/waitlist">API Wait List</a>
@@ -36,10 +47,16 @@
     </div>
 
       <script type="text/javascript">
-      $.get("/api/table", function(data) {
+$.get("/api/table", function(data) {
         console.log(data);
         for (var i = 0; i < data.length; i++) {
-        	$("reservations").append(data[i].uniqueID;
+            $("#reservations > tbody").append("<tr><td>" + data[i].uniqueID);
+        };
+      });
+$.get("/api/waitlist", function(data) {
+        console.log(data);
+        for (var i = 0; i < data.length; i++) {
+            $("#waitlist > tbody").append("<tr><td>" + data[i].uniqueID);
         };
       });
   </script>
